[package]
name = "drainpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
ciborium = "0.2.2"
cid = "0.11.1"
diesel = { version = "2.2.0", features = ["sqlite"] }
dotenv-flow = "0.16.2"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
rsky-lexicon = "0.1.0"
serde = "1.0.203"
serde_bytes = "0.11.14"
serde_ipld_dagcbor = "0.6.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-metrics = "0.3.1"
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
url = "2.5.0"
